--- a/kettleweb/templates/rollout_view.html
+++ b/kettleweb/templates/rollout_view.html
@@ -39,7 +39,7 @@
     {% endif %}
     <ul>
         <li>
-        Status: {{ rollout.nice_status() }}
+        Status: {{ rollout.friendly_status() }}
         </li>
     </ul>
     <ul>
