Rollout => Revert for tasks

--- a/kettleweb/templates/rollout_view.html
+++ b/kettleweb/templates/rollout_view.html
@@ -44,10 +44,10 @@
     </ul>
     <ul>
         <li>
-        Rollout: {{ rollout.rollout_friendly_status }}
+        Rollout: {{ rollout.rollout_friendly_status() }}
         </li>
         <li>
-        Rollback: {{ rollout.rollback_friendly_status }}
+        Rollback: {{ rollout.rollback_friendly_status() }}
         </li>
     </ul>
     <ul>
