--- a/kettleweb/templates/index.html
+++ b/kettleweb/templates/index.html
@@ -9,7 +9,7 @@
         </li>
         {% if latest %}
         <li>
-        Latest: <a href="{{ url_for('rollout_view', rollout_id='latest') }}">Rollout {{ latest.id }}</a> - {{ latest.friendly_status() }}
+        Latest: <a href="{{ url_for('rollout_view', rollout_id='latest') }}">Rollout {{ latest.id }}</a> - {{ latest.friendly_status_html()|safe }}
         </li>
         {% endif %}
         <li>
