Set image height to stop flicker

--- a/kettleweb/templates/base.html
+++ b/kettleweb/templates/base.html
@@ -9,7 +9,7 @@
     <body>
         <a href="/" style="text-decoration: none; color: #3399ff">
             <div id="header">
-                <img src="{{ url_for('static', filename='kettle.gif') }}"/>
+                <img src="{{ url_for('static', filename='kettle.gif') }}" width="65px" height="46px" />
                 <h2 style="display: inline;">Kettle</h2>
             </div>
         </a>
