--- a/kettleweb/templates/base.html
+++ b/kettleweb/templates/base.html
@@ -28,5 +28,8 @@
             {% block content %}
             {% endblock %}
         </div>
+        <div id="footer">
+            <p>Powered by: coffee, bacon, sausages, coke, more coffee, sprite, mountain dew, more mountain dew, noms</p>
+        </div>
     </body>
 </html>
