--- a/kettleweb/templates/index.html
+++ b/kettleweb/templates/index.html
@@ -2,10 +2,12 @@
 
 {% block content %}
 <div>
-    Rollouts
+    <h2>
+        Rollouts
+    </h2>
     <ul>
         <li>
-        <a href="{{ url_for('rollout_edit', rollout_id='new') }}">New</a>
+        <a class="new-rollout-button" href="{{ url_for('rollout_edit', rollout_id='new') }}">New</a>
         </li>
         {% if latest %}
         <li>
@@ -16,5 +18,6 @@
         <a href="{{ url_for('rollout_index') }}">All</a>
         </li>
     </ul>
+</div>
 {% endblock %}
 
