--- a/kettleweb/templates/rollout_view.html
+++ b/kettleweb/templates/rollout_view.html
@@ -22,11 +22,13 @@
     <a href="{{ url_for('rollout_edit', rollout_id=rollout.id) }}">Edit</a>
     {% endif %}
     {% if rollout.status not in ('not_started', 'finished', 'rolled_back') %}
-        {% for sig_url, sig_label in available_signals(rollout.id).iteritems() %}
-            <p><a href="{{ sig_url }}" class="signal">{{ sig_label }}</a></p>
-        {% else %}
-            <p>No signals available</p>
-        {% endfor %}
+        <p>
+            {% for sig_url, sig_label in available_signals(rollout.id).iteritems() %}
+                <a href="{{ sig_url }}" class="signal">{{ sig_label }}</a>
+            {% else %}
+                No signals available
+            {% endfor %}
+        </p>
     <p><a href="" onclick="window.auto_refresh=false; return false;">Stop Autorefresh</a></p>
     {% endif %}
     <h3>Info</h3>
