--- a/kettleweb/templates/rollout_view.html
+++ b/kettleweb/templates/rollout_view.html
@@ -23,7 +23,7 @@
     {% endif %}
     {% if rollout.status() not in ('not_started', 'finished', 'rolled_back') %}
         <p>
-            {% for sig_url, sig_label, sig_descr in available_signals(rollout.id).iteritems() %}
+            {% for sig_url, sig_label, sig_descr in available_signals(rollout.id) %}
                 <a href="{{ sig_url }}" class="signal" title="{{ sig_descr }}">{{ sig_label }}</a>
             {% else %}
                 No signals available
