Store the user who started the rollout
This is captured from the standard REMOTE_USER variable.

--- a/kettleweb/templates/index.html
+++ b/kettleweb/templates/index.html
@@ -11,7 +11,9 @@
         </li>
         {% if latest %}
         <li>
-        Latest: <a href="{{ url_for('rollout_view', rollout_id='latest') }}">Rollout {{ latest.id }}</a> - {{ latest.friendly_status_html()|safe }}
+        Latest: <a href="{{ url_for('rollout_view', rollout_id='latest') }}">Rollout {{ latest.id }}</a> -
+        {{ latest.friendly_status_html()|safe }}
+        {% if latest.user %}<span style="font-size: 80%">(deployed by {{ latest.user }})</span>{% endif %}
         </li>
         {% endif %}
         <li>
@@ -20,4 +22,3 @@
     </ul>
 </div>
 {% endblock %}
-
