Fixed unassigned variable in rollout_index

--- a/kettleweb/templates/rollout_index.html
+++ b/kettleweb/templates/rollout_index.html
@@ -11,7 +11,7 @@
             {{ rollout.friendly_status_html()|safe }}
         </td>
         <td>
-            deployed by {% if latest.user %}{{ latest.user }}{% else %}someone{% endif %}
+            deployed by {% if rollout.user %}{{ rollout.user }}{% else %}someone{% endif %}
         </td>
     </tr>
     {% endfor %}
