--- a/kettleweb/templates/base.html
+++ b/kettleweb/templates/base.html
@@ -9,8 +9,8 @@
     <body>
         <a href="{{ url_for('index') }}" style="text-decoration: none; color: #3399ff">
             <div id="header">
-                <img src="{{ url_for('static', filename='kettle.gif') }}" width="65px" height="46px" />
-                <h2 style="display: inline;">Kettle</h2>
+                <img id="logo" src="{{ url_for('static', filename='kettle.gif') }}"/>
+                <h2>Kettle</h2>
             </div>
         </a>
         {% with messages = get_flashed_messages() %}
