--- a/kettleweb/templates/base.html
+++ b/kettleweb/templates/base.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
         <link rel="stylesheet" type="text/css" href ="{{ url_for('static', filename='style.css') }}" media="screen" />
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.js"></script>
+        <script src="{{ url_for('static', filename='static.js') }}"></script>
     {% endblock %}
     </head>
     <body>
