fix: $.(...).replace isn't a function

--- a/kettleweb/templates/rollout_view.html
+++ b/kettleweb/templates/rollout_view.html
@@ -31,7 +31,7 @@
 {% endif %}
 <script type="text/javascript">
     function renderEngineeringChecklistIframe() {
-        $("#checklist").replace(
+        $("#checklist").replaceWith(
             '<iframe src="{{ config['CHECKLIST_URL'] }}{{ rollout.id }}"'
                    + 'width="100%"'
                    + 'height="100%"'
